[package]
name = "bike-shit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"]}
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["udp", "dhcpv4", "medium-ethernet", "nightly"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.2", features = ["defmt"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", optional = true }
embedded-graphics = { version = "0.8.0", features = ["defmt", "fixed_point"] }
embedded-io = { version = "0.4.0", features = ["defmt", "async"] }
heapless = "0.7.16"
log = { version = "0.4.18", optional = true }
panic-persist = { version = "0.3.0", features = ["utf8", "custom-panic-handler"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rand_core = "0.6.4"
ssd1306 = "0.8.0"
static_cell = { version = "1.1.0", features = ["nightly"] }

[features]
usb-log = ["log", "embassy-usb-logger"]
